Add navigation section html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>AWESOME BOOK APP</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <!--<body>
+  <body>
     <div class="wrap-all">
       <nav class="nav-bar flex-end">
         <h2>Awesome Books</h2>
@@ -22,7 +22,7 @@
 
       <div class="date-time flex-end">
         <span class="current-time">Current Time</span>
-      </div> -->
+      </div>
 
       <!--<div class="wrap">
         <h1>All awesome books</h1>
