Add form and address section html file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span class="current-time">Current Time</span>
       </div>
 
-      <!--<div class="wrap">
+      <div class="wrap">
         <h1>All awesome books</h1>
 
         <div class="books"></div>
