Add change to html

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             You can reach out to us!
           </p>
           <ul>
-            <li>e-mail: ezechukwuchibuikemoses@gmail.com</li>
-            <li>phone number: +2348114505542</li>
-            <li>address: 2 Aghaji crescent, G.R.A, Enugu.</li>
+            <li>e-mail: davidokpah396@gmail.com</li>
+            <li>phone number: +2347042554586</li>
+            <li>address:</li>
           </ul>
         </div>
         <p class="copy-right">Copyright</p>
