--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <ul>
             <li>e-mail: davidokpah396@gmail.com</li>
             <li>phone number: +2347042554586</li>
-            <li>address:</li>
+            <li>address: n0.1 lane C, Sun city estate, Abuja</li>
           </ul>
         </div>
         <p class="copy-right">Copyright</p>
