Add changes to html file

--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
             Have question or any concerns to get accross to us? <br />
             You can reach out to us!
           </p>
-          <ul>
-            <li>e-mail: davidokpah396@gmail.com</li>
-            <li>phone number: +2347042554586</li>
-            <li>address:</li>
-          </ul>
+          <div class="address-1">
+            <ul>
+              <li>e-mail: davidokpah396@gmail.com</li>
+              <li>phone number: +2347042554586</li>
+              <li>address:</li>
+            </ul>
+          </div>
         </div>
         <p class="copy-right">Copyright</p>
       </div>
